--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,45 +77,6 @@
        </property>
       </column>
      </widget>
-     <widget class="QPushButton" name="bt_printinfo">
-      <property name="geometry">
-       <rect>
-        <x>400</x>
-        <y>100</y>
-        <width>89</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Print info</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="bt_obb">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>100</y>
-        <width>70</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>OBB</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="bt_aabb">
-      <property name="geometry">
-       <rect>
-        <x>300</x>
-        <y>100</y>
-        <width>70</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>AABB</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="bt_calchistogram">
       <property name="geometry">
        <rect>
@@ -220,17 +181,17 @@
        <string>0.01</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="bt_filter">
+     <widget class="QPushButton" name="bt_voxelfilter">
       <property name="geometry">
        <rect>
         <x>340</x>
         <y>70</y>
-        <width>89</width>
+        <width>131</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Filter points</string>
+       <string>Voxel filter points</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_voxelsize">
@@ -239,11 +200,11 @@
         <x>210</x>
         <y>75</y>
         <width>67</width>
-        <height>17</height>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Voxel size</string>
+       <string>Grid size</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_viewleft">
@@ -425,7 +386,7 @@
       <property name="geometry">
        <rect>
         <x>420</x>
-        <y>150</y>
+        <y>160</y>
         <width>101</width>
         <height>20</height>
        </rect>
@@ -440,25 +401,25 @@
        <string>Pointcloud</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="bt_planeseg">
+     <widget class="QPushButton" name="bt_planeseg_1">
       <property name="geometry">
        <rect>
         <x>360</x>
         <y>280</y>
-        <width>151</width>
+        <width>81</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Plane segmentation</string>
+       <string>PlaneSeg1</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_planeremove">
       <property name="geometry">
        <rect>
-        <x>360</x>
+        <x>400</x>
         <y>310</y>
-        <width>151</width>
+        <width>111</width>
         <height>25</height>
        </rect>
       </property>
@@ -497,7 +458,7 @@
        <rect>
         <x>280</x>
         <y>310</y>
-        <width>20</width>
+        <width>25</width>
         <height>25</height>
        </rect>
       </property>
@@ -508,9 +469,9 @@
      <widget class="QLineEdit" name="line_planecoef_b">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>310</x>
         <y>310</y>
-        <width>21</width>
+        <width>25</width>
         <height>25</height>
        </rect>
       </property>
@@ -521,9 +482,9 @@
      <widget class="QLineEdit" name="line_planecoef_c">
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>340</x>
         <y>310</y>
-        <width>21</width>
+        <width>25</width>
         <height>25</height>
        </rect>
       </property>
@@ -544,12 +505,194 @@
        <string>plan coef</string>
       </property>
      </widget>
+     <widget class="QLineEdit" name="line_planecoef_d">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>310</y>
+        <width>25</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_drawplan">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>340</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Draw Plan</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_planestimate">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>340</y>
+        <width>141</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Plane Estimation</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>105</y>
+        <width>51</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>meanK</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="line_outlier_meank">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>100</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>50</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>105</y>
+        <width>51</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>std dist</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="line_outlier_stddist">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>100</y>
+        <width>21</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_outlierremove">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>100</y>
+        <width>111</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Outlier remove</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_setpointorigin">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>130</y>
+        <width>111</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Set points origin</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_planeseg_2">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>280</y>
+        <width>81</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>PlaneSeg2</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_label">
      <attribute name="title">
       <string>Labelling</string>
      </attribute>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="bt_test1">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>80</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Test 1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_test2">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>110</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Test 2</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>140</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Test 3</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="line_test1">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>50</y>
+      <width>91</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0.01</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
