--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
-    <height>527</height>
+    <width>650</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>10</x>
       <y>10</y>
       <width>531</width>
-      <height>451</height>
+      <height>471</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -59,7 +59,7 @@
         <x>10</x>
         <y>40</y>
         <width>191</width>
-        <height>371</height>
+        <height>391</height>
        </rect>
       </property>
       <property name="verticalScrollBarPolicy">
@@ -80,7 +80,7 @@
      <widget class="QPushButton" name="bt_calchistogram">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>310</x>
         <y>380</y>
         <width>121</width>
         <height>25</height>
@@ -93,8 +93,8 @@
      <widget class="QLabel" name="label_prefixhist">
       <property name="geometry">
        <rect>
-        <x>340</x>
-        <y>382</y>
+        <x>260</x>
+        <y>412</y>
         <width>41</width>
         <height>20</height>
        </rect>
@@ -106,8 +106,8 @@
      <widget class="QLineEdit" name="line_prefiximg">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>380</y>
+        <x>310</x>
+        <y>410</y>
         <width>51</width>
         <height>25</height>
        </rect>
@@ -119,8 +119,8 @@
      <widget class="QPushButton" name="bt_savehistimg">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>380</y>
+        <x>360</x>
+        <y>410</y>
         <width>71</width>
         <height>25</height>
        </rect>
@@ -635,6 +635,51 @@
        <string>PlaneSeg2</string>
       </property>
      </widget>
+     <widget class="QComboBox" name="comboBox_colormap">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>380</y>
+        <width>91</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Magma</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Inferno</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Plasma</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Viridis</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Cividis</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Parula</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>JetMod</string>
+       </property>
+      </item>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_label">
      <attribute name="title">
@@ -700,7 +745,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>681</width>
+     <width>650</width>
      <height>22</height>
     </rect>
    </property>
