--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,7 +100,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>hist2_</string>
+       <string/>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_savehistimg">
@@ -199,25 +199,25 @@
        <rect>
         <x>210</x>
         <y>210</y>
-        <width>50</width>
+        <width>21</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Left</string>
+       <string>←</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_viewright">
       <property name="geometry">
        <rect>
-        <x>330</x>
+        <x>270</x>
         <y>210</y>
-        <width>50</width>
+        <width>21</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Right</string>
+       <string>→</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_camera">
@@ -242,46 +242,46 @@
      <widget class="QPushButton" name="bt_viewdown">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>240</x>
         <y>240</y>
-        <width>50</width>
+        <width>21</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Down</string>
+       <string>↓</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_viewup">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>240</x>
         <y>180</y>
-        <width>50</width>
+        <width>21</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Up</string>
+       <string>↑</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_resetcam">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>240</x>
         <y>210</y>
-        <width>50</width>
+        <width>21</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Reset </string>
+       <string>Re</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="line_x_rot">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>350</x>
         <y>180</y>
         <width>31</width>
         <height>25</height>
@@ -294,9 +294,9 @@
      <widget class="QPushButton" name="bt_xrot">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>310</x>
         <y>180</y>
-        <width>51</width>
+        <width>41</width>
         <height>25</height>
        </rect>
       </property>
@@ -307,7 +307,7 @@
      <widget class="QLineEdit" name="line_y_rot">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>350</x>
         <y>210</y>
         <width>31</width>
         <height>25</height>
@@ -320,7 +320,7 @@
      <widget class="QLineEdit" name="line_z_rot">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>350</x>
         <y>240</y>
         <width>31</width>
         <height>25</height>
@@ -333,9 +333,9 @@
      <widget class="QPushButton" name="bt_yrot">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>310</x>
         <y>210</y>
-        <width>51</width>
+        <width>41</width>
         <height>25</height>
        </rect>
       </property>
@@ -346,9 +346,9 @@
      <widget class="QPushButton" name="bt_zrot">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>310</x>
         <y>240</y>
-        <width>51</width>
+        <width>41</width>
         <height>25</height>
        </rect>
       </property>
@@ -717,6 +717,100 @@
       </property>
       <property name="text">
        <string>-01</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_xrot_plus">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>190</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>x +1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_xrot_minus">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>230</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>x -1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_yrot_plus">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>180</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>y +1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_yrot_minus">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>180</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>y -1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_zrot_plus">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>210</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>z +1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_zrot_minus">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>210</y>
+        <width>31</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>z -1</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_autocalchist">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>250</y>
+        <width>121</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Auto Calc Hist</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
