--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -80,15 +80,15 @@
      <widget class="QPushButton" name="bt_calchistogram">
       <property name="geometry">
        <rect>
-        <x>210</x>
-        <y>410</y>
-        <width>91</width>
+        <x>330</x>
+        <y>375</y>
+        <width>121</width>
         <height>25</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>10</pointsize>
+        <pointsize>11</pointsize>
        </font>
       </property>
       <property name="text">
@@ -98,7 +98,7 @@
      <widget class="QLineEdit" name="line_prefiximg">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>210</x>
         <y>415</y>
         <width>51</width>
         <height>20</height>
@@ -116,14 +116,14 @@
      <widget class="QPushButton" name="bt_savehistimg">
       <property name="geometry">
        <rect>
-        <x>540</x>
-        <y>410</y>
-        <width>71</width>
-        <height>25</height>
+        <x>460</x>
+        <y>415</y>
+        <width>151</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Save .png</string>
+       <string>Save histogram .png</string>
       </property>
      </widget>
      <widget class="QPushButton" name="bt_saveply">
@@ -439,7 +439,7 @@
      <widget class="QPushButton" name="bt_setpointorigin">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>280</x>
         <y>70</y>
         <width>171</width>
         <height>25</height>
@@ -456,8 +456,8 @@
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>370</y>
-        <width>91</width>
+        <y>375</y>
+        <width>111</width>
         <height>25</height>
        </rect>
       </property>
@@ -499,15 +499,35 @@
         <string>JetMod</string>
        </property>
       </item>
+      <item>
+       <property name="text">
+        <string>PlasmaMod</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>ViridisMod</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>CividisMod</string>
+       </property>
+      </item>
      </widget>
      <widget class="QPushButton" name="bt_histgraph1">
       <property name="geometry">
        <rect>
-        <x>310</x>
-        <y>370</y>
+        <x>210</x>
+        <y>350</y>
         <width>81</width>
-        <height>25</height>
+        <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>hist graph1</string>
@@ -516,20 +536,25 @@
      <widget class="QPushButton" name="bt_histgraph2">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>370</y>
-        <width>81</width>
-        <height>25</height>
+        <x>300</x>
+        <y>350</y>
+        <width>151</width>
+        <height>20</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
       <property name="text">
-       <string>hist graph2</string>
+       <string>Calc Hist xyz+-2, save png</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="line_histnameimg">
       <property name="geometry">
        <rect>
-        <x>370</x>
+        <x>270</x>
         <y>415</y>
         <width>113</width>
         <height>20</height>
@@ -544,9 +569,9 @@
      <widget class="QLineEdit" name="line_postfiximg">
       <property name="geometry">
        <rect>
-        <x>490</x>
+        <x>390</x>
         <y>415</y>
-        <width>41</width>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -990,7 +1015,7 @@
      <widget class="QLabel" name="label_prefix">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>210</x>
         <y>400</y>
         <width>51</width>
         <height>17</height>
@@ -1008,7 +1033,7 @@
      <widget class="QLabel" name="label_postfix">
       <property name="geometry">
        <rect>
-        <x>490</x>
+        <x>390</x>
         <y>400</y>
         <width>51</width>
         <height>17</height>
@@ -1618,7 +1643,7 @@
      <widget class="QLabel" name="label_in_imgsize">
       <property name="geometry">
        <rect>
-        <x>550</x>
+        <x>540</x>
         <y>371</y>
         <width>91</width>
         <height>20</height>
@@ -1636,7 +1661,7 @@
      <widget class="QLabel" name="label_imgsize">
       <property name="geometry">
        <rect>
-        <x>480</x>
+        <x>470</x>
         <y>370</y>
         <width>71</width>
         <height>20</height>
@@ -1706,7 +1731,7 @@
      <widget class="QLabel" name="label_maxdensity">
       <property name="geometry">
        <rect>
-        <x>480</x>
+        <x>470</x>
         <y>350</y>
         <width>91</width>
         <height>20</height>
@@ -1719,7 +1744,7 @@
      <widget class="QLabel" name="label_in_maxdensity">
       <property name="geometry">
        <rect>
-        <x>570</x>
+        <x>560</x>
         <y>351</y>
         <width>91</width>
         <height>20</height>
@@ -1732,6 +1757,32 @@
       </property>
       <property name="text">
        <string>000</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_savepointcloudimg">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>390</y>
+        <width>151</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Save pointcloud.png</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="bt_reload">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>70</y>
+        <width>61</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Reload</string>
       </property>
      </widget>
     </widget>
