--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -700,7 +700,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>270</y>
+        <y>245</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -724,7 +724,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>295</y>
+        <y>270</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -748,7 +748,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>245</y>
+        <y>220</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -772,7 +772,7 @@
       <property name="geometry">
        <rect>
         <x>430</x>
-        <y>245</y>
+        <y>220</y>
         <width>20</width>
         <height>20</height>
        </rect>
@@ -797,7 +797,7 @@
       <property name="geometry">
        <rect>
         <x>510</x>
-        <y>245</y>
+        <y>220</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -821,7 +821,7 @@
       <property name="geometry">
        <rect>
         <x>430</x>
-        <y>295</y>
+        <y>270</y>
         <width>20</width>
         <height>20</height>
        </rect>
@@ -846,7 +846,7 @@
       <property name="geometry">
        <rect>
         <x>510</x>
-        <y>295</y>
+        <y>270</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -869,16 +869,16 @@
      <widget class="QPushButton" name="bt_passthroughfilter_xyz">
       <property name="geometry">
        <rect>
-        <x>430</x>
-        <y>315</y>
-        <width>181</width>
+        <x>450</x>
+        <y>320</y>
+        <width>161</width>
         <height>21</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Ubuntu</family>
-        <pointsize>10</pointsize>
+        <pointsize>9</pointsize>
         <weight>50</weight>
         <bold>false</bold>
         <kerning>true</kerning>
@@ -898,7 +898,7 @@
       <property name="geometry">
        <rect>
         <x>510</x>
-        <y>270</y>
+        <y>245</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -922,7 +922,7 @@
       <property name="geometry">
        <rect>
         <x>520</x>
-        <y>225</y>
+        <y>200</y>
         <width>31</width>
         <height>20</height>
        </rect>
@@ -947,7 +947,7 @@
       <property name="geometry">
        <rect>
         <x>430</x>
-        <y>270</y>
+        <y>245</y>
         <width>20</width>
         <height>20</height>
        </rect>
@@ -972,7 +972,7 @@
       <property name="geometry">
        <rect>
         <x>460</x>
-        <y>225</y>
+        <y>200</y>
         <width>31</width>
         <height>20</height>
        </rect>
@@ -1357,7 +1357,7 @@
      <widget class="QLabel" name="label_pointbound_3">
       <property name="geometry">
        <rect>
-        <x>460</x>
+        <x>400</x>
         <y>200</y>
         <width>61</width>
         <height>20</height>
@@ -1376,10 +1376,10 @@
      <widget class="QPushButton" name="bt_getboundary">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>210</x>
         <y>315</y>
-        <width>81</width>
-        <height>21</height>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="font">
@@ -1511,7 +1511,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>245</y>
+        <y>220</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -1539,7 +1539,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>270</y>
+        <y>245</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -1567,7 +1567,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>295</y>
+        <y>270</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -1594,9 +1594,9 @@
      <widget class="QPushButton" name="bt_show_bounding">
       <property name="geometry">
        <rect>
-        <x>510</x>
-        <y>210</y>
-        <width>101</width>
+        <x>450</x>
+        <y>295</y>
+        <width>111</width>
         <height>21</height>
        </rect>
       </property>
@@ -2049,6 +2049,7 @@
      <string>Pointcloud</string>
     </property>
     <addaction name="actionSet_points_origin_whole_folder"/>
+    <addaction name="actionVoxel_grid_all"/>
    </widget>
    <widget class="QMenu" name="menuHistogramImg">
     <property name="title">
@@ -2099,6 +2100,11 @@
   <action name="actionCalc_Hist_xyz_all">
    <property name="text">
     <string>Calc Hist xyz variation all</string>
+   </property>
+  </action>
+  <action name="actionVoxel_grid_all">
+   <property name="text">
+    <string>Voxel grid all</string>
    </property>
   </action>
  </widget>
