--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,9 +57,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>60</y>
+        <y>90</y>
         <width>191</width>
-        <height>371</height>
+        <height>341</height>
        </rect>
       </property>
       <property name="verticalScrollBarPolicy">
@@ -1783,6 +1783,32 @@
       </property>
       <property name="text">
        <string>Reload</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_bg_black">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>81</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>bg black</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_bg_white">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>60</y>
+        <width>81</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>bg white</string>
       </property>
      </widget>
     </widget>
